--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
             <div class="main-section-s2">
                   <div class=" inner-data">
                 <div class="couple-name wow fadeInUp">
-                      <h1 class="wow fadeInLeft">नितिन</h1>
+                      <h1 class="wow fadeInLeft">चि.नितिन</h1>
                       <span class="glyphicon glyphicon-heart"></span>
-                      <h1 class="wow fadeInRight">पूजा</h1>
+                      <h1 class="wow fadeInRight">चि.सौ.कां.पूजा</h1>
                     </div>
                 <div class="tag-line wow fadeInUp">
                       <p><span><h4>*   शुभ विवाह   *</h4></span></p>
