--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                             </li>
                       </ul>
                         </div>
-						<h4 style="color:red;"><strong>Design and Concept : TSCode pvt. Ltd, Pune : 8308573023/7083241194</strong></h4>
+					<!--	<h4 style="color:red;"><strong>Design and Concept : TSCode pvt. Ltd, Pune : 8308573023/7083241194</strong></h4> -->
                     <div class="clearfix"></div>
                   </div>
                       <div class="clearfix"></div>
